--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <!-- Make the application on mobile take up the full browser screen and disable user scaling. -->
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, minimum-scale=1, user-scalable=no">
-  <title>Hello World!</title>
+  <title>地形強調サンプル</title>
   <script src="Cesium/Cesium.js"></script>
   <style>
       @import url(Cesium/Widgets/widgets.css);
@@ -23,6 +23,7 @@
       timeline: false,
 			animation: false,
       baseLayerPicker: false,
+      //地形強調のパラメータ
       terrainExaggeration: 10.0
     });
     var cesiumTerrainProviderMeshes = new Cesium.CesiumTerrainProvider({
