--- a/index.html
+++ b/index.html
@@ -1,37 +1,90 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-  <!-- Use correct character set. -->
   <meta charset="utf-8">
-  <!-- Tell IE to use the latest, best version. -->
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <!-- Make the application on mobile take up the full browser screen and disable user scaling. -->
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, minimum-scale=1, user-scalable=no">
-  <title>地形強調サンプル</title>
+  <meta name="description" content="Cesiumを使った地形強調のサンプルプログラム" />
+	<meta property="og:image" content="https://hwtnv.github.io/terrain10x/screen.jpg" />
+	<meta property="og:description" content="Cesiumを使った地形強調のサンプルプログラム" />
+	<meta name="twitter:card" content="summary_large_image" />
+	<meta name="twitter:site" content="@hwtnv" />
+	<meta name="twitter:creator" content="@hwtnv" />
+	<meta name="twitter:title" content="Cesium地形強調サンプル" />
+	<meta name="twitter:description" content="Cesiumを使った地形強調のサンプルプログラム"
+	/>
+	<meta name="twitter:image" content="https://hwtnv.github.io/terrain10x/screen.jpg" />
+  <title>Cesium地形強調サンプル</title>
   <script src="Cesium/Cesium.js"></script>
   <style>
-      @import url(Cesium/Widgets/widgets.css);
-      html, body, #cesiumContainer {
-          width: 100%; height: 100%; margin: 0; padding: 0; overflow: hidden;
-      }
+    @import url(Cesium/Widgets/widgets.css);
+    html,
+    body,
+    #cesiumContainer {
+      width: 100%;
+      height: 100%;
+      margin: 0;
+      padding: 0;
+      overflow: hidden;
+    }
   </style>
 </head>
+
 <body>
   <div id="cesiumContainer"></div>
   <script>
-    var viewer = new Cesium.Viewer('cesiumContainer',{
+    //視点配列作成
+
+    function viewPoints(_label, _lat, _lng, _heading, _pitch, _range) {
+      this.label = _label;
+      this.lat = _lat;
+      this.lng = _lng;
+      this.heading = _heading;
+      this.pitch = _pitch;
+      this.range = _range;
+    }
+
+    var viewPointsArray = [];
+    viewPointsArray[0] = new viewPoints("東京", 35.6852, 139.7528, 0, -20, 75000);
+
+    var viewer = new Cesium.Viewer('cesiumContainer', {
       timeline: false,
-			animation: false,
+      animation: false,
       baseLayerPicker: false,
+      homeButton: false,
       //地形強調のパラメータ
       terrainExaggeration: 10.0
     });
     var cesiumTerrainProviderMeshes = new Cesium.CesiumTerrainProvider({
-			url: '//assets.agi.com/stk-terrain/world',
-			requestWaterMask: true,
-			requestVertexNormals: true
-		});
-		viewer.terrainProvider = cesiumTerrainProviderMeshes;
+      url: '//assets.agi.com/stk-terrain/world',
+      requestWaterMask: true,
+      requestVertexNormals: true
+    });
+    viewer.terrainProvider = cesiumTerrainProviderMeshes;
+
+    changeViewPoint(0, 3);
+
+    //視点変更
+    function changeViewPoint(num, delay) {
+      var newLat = viewPointsArray[num].lat;
+      var newLng = viewPointsArray[num].lng;
+      var newHeading = Cesium.Math.toRadians(viewPointsArray[num].heading);
+      var newPitch = Cesium.Math.toRadians(viewPointsArray[num].pitch);
+      var newRange = viewPointsArray[num].range;
+
+      var center = Cesium.Cartesian3.fromDegrees(newLng, newLat);
+      var boundingSphere = new Cesium.BoundingSphere(center, newRange);
+      var headingPitchRange = new Cesium.HeadingPitchRange(newHeading, newPitch, newRange);
+
+      viewer.camera.constrainedAxis = Cesium.Cartesian3.UNIT_Z;
+      viewer.camera.flyToBoundingSphere(boundingSphere, {
+        duration: delay,
+        offset: headingPitchRange,
+        easingFunction: Cesium.EasingFunction.CUBIC_IN_OUT
+      });
+    }
   </script>
 </body>
+
 </html>
