--- a/index.html
+++ b/index.html
@@ -6,15 +6,14 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, minimum-scale=1, user-scalable=no">
   <meta name="description" content="Cesiumを使った地形強調のサンプルプログラム" />
-	<meta property="og:image" content="https://hwtnv.github.io/terrain10x/screen.jpg" />
-	<meta property="og:description" content="Cesiumを使った地形強調のサンプルプログラム" />
-	<meta name="twitter:card" content="summary_large_image" />
-	<meta name="twitter:site" content="@hwtnv" />
-	<meta name="twitter:creator" content="@hwtnv" />
-	<meta name="twitter:title" content="Cesium地形強調サンプル" />
-	<meta name="twitter:description" content="Cesiumを使った地形強調のサンプルプログラム"
-	/>
-	<meta name="twitter:image" content="https://hwtnv.github.io/terrain10x/screen.jpg" />
+  <meta property="og:image" content="https://hwtnv.github.io/terrain10x/screen.jpg" />
+  <meta property="og:description" content="Cesiumを使った地形強調のサンプルプログラム" />
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:site" content="@hwtnv" />
+  <meta name="twitter:creator" content="@hwtnv" />
+  <meta name="twitter:title" content="Cesium地形強調サンプル" />
+  <meta name="twitter:description" content="Cesiumを使った地形強調のサンプルプログラム" />
+  <meta name="twitter:image" content="https://hwtnv.github.io/terrain10x/screen.jpg" />
   <title>Cesium地形強調サンプル</title>
   <script src="Cesium/Cesium.js"></script>
   <style>
@@ -46,9 +45,13 @@
     }
 
     var viewPointsArray = [];
-    viewPointsArray[0] = new viewPoints("東京", 35.3606, 138.7278, 0, -25, 110000);
+    viewPointsArray[0] = new viewPoints("東京", 35.3606, 138.7278, 0, -45, 160000);
 
     var viewer = new Cesium.Viewer('cesiumContainer', {
+      imageryProvider: new Cesium.ArcGisMapServerImageryProvider({
+        url: '//server.arcgisonline.com/ArcGIS/rest/services/World_Imagery/MapServer',
+        enablePickFeatures: false
+      }),
       timeline: false,
       animation: false,
       baseLayerPicker: false,
