--- a/index.html
+++ b/index.html
@@ -58,6 +58,7 @@
       }),
       timeline: false,
       animation: false,
+      vrButton : true,
       baseLayerPicker: false,
       homeButton: false,
       //地形強調のパラメータ
