英語タイトルを追加

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <meta name="twitter:title" content="Cesium地形強調サンプル" />
   <meta name="twitter:description" content="Cesiumを使った地形強調のサンプルプログラム" />
   <meta name="twitter:image" content="https://hwtnv.github.io/terrain10x/screen.jpg" />
-  <title>Cesium地形強調サンプル</title>
+  <title>Cesium地形強調サンプル｜An interactive terrain exaggeration example</title>
   <script src="Cesium/Cesium.js"></script>
   <style>
     @import url(Cesium/Widgets/widgets.css);
