--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
       }),
       timeline: false,
       animation: false,
-      vrButton : true,
+      //vrButton : true,
       baseLayerPicker: false,
       homeButton: false,
       //地形強調のパラメータ
