--- a/index.html
+++ b/index.html
@@ -35,8 +35,8 @@
   <div id="button" onclick="changeExaggeration()">SET</div>
   <div id="magnification">x10</div>
   <div id="cesiumContainer"></div>
+  <div id="baseLayerPickerContainer"></div>
   <script>
-
     //視点配列作成
 
     function viewPoints(_label, _lat, _lng, _heading, _pitch, _range) {
@@ -52,16 +52,18 @@
     viewPointsArray[0] = new viewPoints("東京", 35.3606, 138.7278, 0, -45, 160000);
 
     var viewer = new Cesium.Viewer('cesiumContainer', {
-      imageryProvider: new Cesium.ArcGisMapServerImageryProvider({
-        url: '//server.arcgisonline.com/ArcGIS/rest/services/World_Imagery/MapServer',
-        enablePickFeatures: false
-      }),
+      //起動時はImageryProviderナシ
+      imageryProvider: false,
       timeline: false,
       animation: false,
       homeButton: false,
-      //地形強調のパラメータ
+      sceneModePicker: false,
+      baseLayerPicker: false,
+      //地形強調のデフォルト値
       terrainExaggeration: 10.0
     });
+    //デフォルトベースマップを黒に
+    viewer.scene.globe.baseColor = Cesium.Color.fromCssColorString('#000000');
     var ellipsoidProvider = new Cesium.EllipsoidTerrainProvider();
     var cesiumTerrainProviderMeshes = new Cesium.CesiumTerrainProvider({
       url: '//assets.agi.com/stk-terrain/world',
@@ -70,21 +72,75 @@
     });
     viewer.terrainProvider = cesiumTerrainProviderMeshes;
 
+    //初期視点に移動
+
     changeViewPoint(0, 3);
+
+    /* ここからbaseLayerPicker追加 */
+
+    //baseLayer配列を用意
+    var imageryViewModels = [];
+
+    //ESRI World Imagery
+    imageryViewModels.push(new Cesium.ProviderViewModel({
+      name: 'ESRI\u00adWorld\u00adImagery',
+      iconUrl: Cesium.buildModuleUrl('Widgets/Images/ImageryProviders/esriWorldImagery.png'),
+      tooltip: 'World Imagery provides one meter or better satellite and aerial imagery in many parts of the world and lower resolution satellite imagery worldwide.  The map includes NASA Blue Marble: Next Generation 500m resolution imagery at small scales (above 1:1,000,000), i-cubed 15m eSAT imagery at medium-to-large scales (down to 1:70,000) for the world, and USGS 15m Landsat imagery for Antarctica. The map features 0.3m resolution imagery in the continental United States and 0.6m resolution imagery in parts of Western Europe from DigitalGlobe. In other parts of the world, 1 meter resolution imagery is available from GeoEye IKONOS, i-cubed Nationwide Prime, Getmapping, AeroGRID, IGN Spain, and IGP Portugal.  Additionally, imagery at different resolutions has been contributed by the GIS User Community.\http://www.esri.com',
+      creationFunction: function () {
+        return new Cesium.ArcGisMapServerImageryProvider({
+          url: '//server.arcgisonline.com/ArcGIS/rest/services/World_Imagery/MapServer',
+          enablePickFeatures: false
+        });
+      }
+    }));
+    //Open Street Map
+    imageryViewModels.push(new Cesium.ProviderViewModel({
+      name: 'Open\u00adStreet\u00adMap',
+      iconUrl: Cesium.buildModuleUrl('Widgets/Images/ImageryProviders/openStreetMap.png'),
+      tooltip: 'OpenStreetMap (OSM) is a collaborative project to create a free editable \
+map of the world.\nhttp://www.openstreetmap.org',
+      creationFunction: function () {
+        return Cesium.createOpenStreetMapImageryProvider({
+          url: 'https://a.tile.openstreetmap.org/'
+        });
+      }
+    }));
+    //Black Marble
+    imageryViewModels.push(new Cesium.ProviderViewModel({
+      name: 'Black Marble',
+      iconUrl: Cesium.buildModuleUrl('Widgets/Images/ImageryProviders/blackMarble.png'),
+      tooltip: 'The lights of cities and villages trace the outlines of civilization \
+in this global view of the Earth at night as seen by NASA/NOAA\'s Suomi NPP satellite.',
+      creationFunction: function () {
+        return Cesium.createTileMapServiceImageryProvider({
+          url: 'https://cesiumjs.org/blackmarble',
+          credit: 'Black Marble imagery courtesy NASA Earth Observatory',
+          flipXY: true
+        });
+      }
+    }));
+    //baseLayerPickerボタンを追加
+    var layers = viewer.imageryLayers;
+    var baseLayerPicker = new Cesium.BaseLayerPicker('baseLayerPickerContainer', {
+      globe: viewer.scene.globe,
+      imageryProviderViewModels: imageryViewModels
+    });
+
+    /* baseLayerPickerここまで */
 
     //地形強調度変更
 
     var slider = document.getElementById("changeExaggeration");
     var magnification = document.getElementById("magnification");
 
-    function textChange(){
+    function textChange() {
       magnification.innerHTML = "x" + slider.value;
     }
 
     function changeExaggeration() {
       var reset = function () {
         viewer.terrainProvider = ellipsoidProvider;
-        setTimeout(adjust,200);
+        setTimeout(adjust, 200);
       }
       var adjust = function () {
         viewer.terrainProvider = cesiumTerrainProviderMeshes;
