地図のクレジット追加

--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
   <div id="magnification">x10</div>
   <div id="cesiumContainer"></div>
   <div id="baseLayerPickerContainer"></div>
+  <div id="creditContainerDiv"></div>
   <script>
     //視点配列作成
 
@@ -59,6 +60,7 @@
       homeButton: false,
       sceneModePicker: false,
       baseLayerPicker: false,
+      creditContainer: creditContainerDiv,
       //地形強調のデフォルト値
       terrainExaggeration: 10.0
     });
