--- a/index.html
+++ b/index.html
@@ -27,7 +27,25 @@
       margin: 0;
       padding: 0;
       overflow: hidden;
-      background:black;
+      background: black;
+    }
+    #blackOut {
+      position: absolute;
+      top:0px;
+      left:0px;
+      margin: 0px;
+      padding: 0px;
+      width: 100%;
+      height: 100%;
+      background: black;
+      z-index: 10001;
+    }
+    .loading {
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      margin-top: -40px;
+      margin-left: -40px;
     }
   </style>
 </head>
@@ -39,6 +57,9 @@
   <div id="cesiumContainer"></div>
   <div id="baseLayerPickerContainer"></div>
   <div id="creditContainerDiv"></div>
+  <div id="blackOut">
+    <img class="loading" src="img/loading.gif">
+  </div>
   <script>
     function resizeWindow() {
       var screenWidth = window.innerWidth;
@@ -46,8 +67,10 @@
       $(function () {
         document.body.style.height = screenHeight;
         $('#cesiumContainer').height(screenHeight);
+        $('#blackOut').height(screenHeight);
+        $('#blackOut').fadeOut(2000);
       });
-      setTimeout('loadCesium()', 500);
+      setTimeout('loadCesium()', 1000);
     }
 
     //視点配列作成
