スライドバーのpositionをfixedに

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, minimum-scale=1, user-scalable=no">
+  <meta name="viewport" content="shrink-to-fit=no, width=device-width, initial-scale=1, maximum-scale=1, minimum-scale=1, user-scalable=no">
   <meta name="description" content="Cesiumを使った地形強調のサンプルプログラム" />
   <meta property="og:image" content="https://hwtnv.github.io/terrain10x/screen.jpg" />
   <meta property="og:description" content="Cesiumを使った地形強調のサンプルプログラム" />
@@ -27,6 +27,7 @@
       margin: 0;
       padding: 0;
       background: black;
+      overflow:hidden;
     }
 
     #blackOut {
