--- a/index.html
+++ b/index.html
@@ -19,14 +19,16 @@
   <script src="js/jquery-2.1.3.min.js"></script>
   <style>
     @import url(Cesium/Widgets/widgets.css);
+    html,
     body,
     #cesiumContainer {
       width: 100%;
       height: 100%;
       margin: 0;
       padding: 0;
-      background: black;
-      overflow:hidden;
+      overflow: hidden;
+      position: fixed;
+      background-color: black;
     }
 
     #blackOut {
@@ -51,7 +53,7 @@
   </style>
 </head>
 
-<body onLoad="setTimeout('resizeWindow(1)', 1000)">
+<body>
   <input type="range" name="exaggeration" id="changeExaggeration" value="10" min="-10" max="10" step="1" oninput="textChange()">
   <div id="button" onclick="changeExaggeration()">SET</div>
   <div id="magnification">x10</div>
@@ -62,47 +64,19 @@
     <img class="loading" src="img/loading.gif">
   </div>
   <script>
+    setTimeout('resizeWindow()', 1000);
 
-var _ua = (function(u){
-return {
-Facebook:(u.indexOf("fban/fbios;fbav") != -1)
-}
-})(window.navigator.userAgent.toLowerCase());
-
-console.log(_ua.Facebook);
-
-    function resizeWindow(param) {
-      if (_ua.Facebook == true){
-        var screenHeight = window.innerHeight - 100;
-        } else {
+    function resizeWindow() {
+      var screenWidth = window.innerWidth;
       var screenHeight = window.innerHeight;
-      }
       $(function () {
-        console.log("resized");
         document.body.style.height = screenHeight;
         $('#cesiumContainer').height(screenHeight);
         $('#blackOut').height(screenHeight);
-        $('#magnification').css('bottom', '2px');
-        $('#changeExaggeration').css('bottom', '12px')
-        $('#button').css('bottom', '40px')
         $('#blackOut').fadeOut(1000);
       });
-      if (param == 1) {
-        setTimeout('loadCesium()', 100);
-      }
+      setTimeout('loadCesium()', 100);
     }
-
-    var timer = false;
-    $(window).resize(function () {
-      if (timer !== false) {
-        clearTimeout(timer);
-      }
-      timer = setTimeout(function () {
-        console.log('resized');
-        resizeWindow(0);
-      }, 200);
-    });
-
     //視点配列作成
 
     function viewPoints(_label, _lat, _lng, _heading, _pitch, _range) {
