--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
   <title>Cesium地形強調サンプル｜An interactive terrain exaggeration example</title>
   <script src="Cesium/Cesium.js"></script>
   <script src="js/jquery-2.1.3.min.js"></script>
-  <script src="http://www.google.com/jsapi"></script>
-  <script type="text/javascript" src="http://maps.google.com/maps/api/js?key=AIzaSyCc9E-ulJKRVMPyJe_V5sUVNU8kxiDIUtg"></script>
+  <script src="https://www.google.com/jsapi"></script>
+  <script type="text/javascript" src="https://maps.google.com/maps/api/js?key=AIzaSyCc9E-ulJKRVMPyJe_V5sUVNU8kxiDIUtg"></script>
   <style>
     @import url(Cesium/Widgets/widgets.css);
     html,
